--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -171,7 +171,18 @@
 </div>
 
 <div class="screen">
-  <button mat-raised-button (click)="openModal()" class="margin" color="primary" >Оформить заявку</button>
+  <div style="display: flex; flex-direction: column; align-items: center; width: 100%; height: 100%;">
+    <div>
+      <h2>Заявка на финансирование</h2>
+    </div>
+    <mat-form-field style="width: 300px">
+      <input matInput placeholder="Имя" value="">
+    </mat-form-field>
+    <mat-form-field style="width: 300px">
+      <input matInput placeholder="Телефон" value="">
+    </mat-form-field>
+    <button mat-raised-button color="warn">Отправить заявку</button>
+  </div>
 </div>
 
 
