--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,167 +1,250 @@
+
+<div class="blackLine">
+  <div class="logo"></div> 
+  <span class="numberForConnection">
+    <div class="yellowTreangle"></div> 
+    +375(25)529-78-06
+  </span>
+</div>
+
 <!--  First screen -->
+<div class="screen firstScreen" [style.minWidth.px] = "clientWidth" [style.minHeight.px] = "clientHeight">
+  <div [style.minWidth.px] = "clientWidth" [style.minHeight.px] = "clientHeight*0.55" >
+  <div [style]="firstScreenFirstHalfStyle">
+  <div class="screen" [style.minWidth.px] = "clientWidth" [style.minHeight.px] = "clientHeight*0.55" >
+    <div id='logoAbsolute'><div></div></div>
+  </div>
+  </div>
+  </div>
+  
+  <div [style.minWidth.px] = "clientWidth" [style.minHeight.px] = "clientHeight*0.45">
+  <div [style]="firstScreenSecondHalfStyle">
+  <div class="secondHalfFirstScreenBlocks" [style.minWidth.px] = "clientWidth" [style.minHeight.px] = "clientHeight*0.45">
+    <button class="bottonToDown"><p>Подобрать условия</p></button>
 
-<div class="screen"  [style.minWidth.px] = "clientWidth" [style.minHeight.px] = "clientHeight" >
-  <div class="main">
-    <div class="mainTitle">
-      <h2>Мультидиллер</h2>
+    <div class="iconContainer">
+      <div class="iconForAttract">
+        <div class="iconTime iconSize"></div>
+        <p class="iconTitleSize">Быстрое рассмотрение</p>
+      </div>
+      <div class="iconForAttract">
+        <div class="iconDocument iconSize"></div>
+        <p class="iconTitleSize">Минимум документов</p>
+      </div>
+      <div class="iconForAttract">
+        <div class="iconPercentage iconSize"></div>
+        <p class="iconTitleSize">Выгодные условия</p>
+      </div>
+      <div class="iconForAttract">
+        <div class="iconTrafic iconSize"></div>
+        <p class="iconTitleSize">Любой автомобиль</p>
+      </div>
     </div>
-    <div class="mainContent">
-      <p align="justify">
-          Мы проанализировали предложения 21 банка и 18 лизинговых компаний в области финансирования покупки автомобиля и подобрали самые выгодные условия в части переплаты процентов, скорости рассмотрения и доступности кредита/лизинга
-      </p>
-
-      <p align="center">
-        Подберите свой индивидуальный вариант покупки автомобиля:
-      </p>
-
-      <mat-button-toggle-group class="buttonGroup" name="fontStyle" aria-label="Font Style">
-        <mat-button-toggle class="button" (click)="selectedNew = 'new'" value="new">Новый</mat-button-toggle>
-        <mat-button-toggle class="button" (click)="selectedNew = 'notNew'"  value="notNew">С пробегом</mat-button-toggle>
-      </mat-button-toggle-group>
-
-      <!-- Start template -->
-      <mat-button-toggle-group class="buttonGroup" name="fontStyle" aria-label="Font Style">
-        <mat-button-toggle class="button" (click)="selectedFace = 'F'" value="fl">ФЛ</mat-button-toggle>
-        <mat-button-toggle class="button" (click)="selectedFace = 'U'" (click)="scrollToSecondPage()" value="ul">ЮЛ</mat-button-toggle>
-      </mat-button-toggle-group>
-      <!-- End template -->
-
-    </div>
+    <div class="textTitle"><p>КРЕДИТ/ЛИЗИНГ НОВЫХ И<br>ПОДЕРЖАННЫХ АВТОМОБИЛЕЙ</p></div>
+  </div>
+  </div>
   </div>
 </div>
 
+
 <!--  Second screen -->
-
-<div class="screen"  [style.minWidth.px] = "clientWidth" [style.minHeight.px] = "clientHeight" >
+<div [style.minWidth.px] = "clientWidth" [style.minHeight.px] = "clientHeight">
+<div [style]="secondScreenStyle">
+<div class="screenPage2" [style.minWidth.px] = "clientWidth" [style.minHeight.px] = "clientHeight">
+  <h1 class="page2Title">ПОДБЕРИТЕ ИНДИВИДУАЛЬНЫЙ ВАРИАНТ</h1>
+  <div class="choiseAutoType">
+    <div style=" width: 90%">
+      <h3 class="margin5padding5">Автомобиль:</h3>
+    </div>
+    <mat-button-toggle-group class="buttonGroup" name="fontStyle" aria-label="Font Style">
+      <mat-button-toggle class="radioButton" (click)="selectedNew = 'new'" value="new">Новый</mat-button-toggle>
+      <mat-button-toggle class="radioButton" (click)="selectedNew = 'notNew'"  value="notNew">С пробегом</mat-button-toggle>
+    </mat-button-toggle-group>
   
-  <!-- begin form -->
+    <div style=" width: 90%">
+      <h3 class="margin5padding5">Вы:</h3>
+    </div>
+    <mat-button-toggle-group class="buttonGroup" name="fontStyle" aria-label="Font Style">
+      <mat-button-toggle class="radioButton" (click)="selectedFace = 'F'" value="fl">ФЛ</mat-button-toggle>
+      <mat-button-toggle class="radioButton" (click)="selectedFace = 'U'" (click)="scrollToSecondPage()" value="ul">ЮЛ</mat-button-toggle>
+    </mat-button-toggle-group>
+    <div *ngIf="selectedNew != 'notNew'" class="markModelCompBlock">
+      <form  class="markModelCompForm responsiveForm">
+        <mat-form-field class="markModelCompButtons">
+          <mat-label>Марка</mat-label>
+          <mat-select (openedChange) = "openMarksOptions($event)" [(ngModel)]="selectedMark" name="mark">
+            <mat-option  (click)="closeMarksOptions()" *ngFor="let mark of allMarks" [value]="mark.name">
+              <div class="option">
+                <div>{{mark.name}}</div><div></div><div *ngIf="!isClosedMarksOptions">{{mark.minPrice | priceVisible}}</div>
+              </div>
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        
+        <mat-form-field class="markModelCompButtons">
+          <mat-label>Модель</mat-label>
+          <mat-select (openedChange) = "openModelsOptions($event)" [(ngModel)]="selectedModel" name="model">
+            <mat-option (click)="closeModelsOptions()" *ngFor="let model of models" [value]="model.name">
+              <div class="option">
+                <div>{{model.name}}</div><div></div><div *ngIf="!isClosedModelsOptions">{{model.minPrice | priceVisible}}</div>
+              </div>
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        
+        
+        <mat-form-field  class="markModelCompButtons" >
+          <mat-label>Комплектация</mat-label>
+          <mat-select (openedChange) = "openCompsOptions($event)" [(ngModel)]="selectedComp" name="comp">
+            <mat-option (click)="closeCompsOptions()" *ngFor="let comp of comps" [value]="comp.name">
+              <div class="option">
+                <div>{{comp.name}}</div><div></div><div *ngIf="!isClosedCompsOptions">{{comp.price | priceVisible}}</div>
+              </div>
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        </form>
+    </div>
 
-  <form *ngIf="selectedNew != 'notNew'" class="responsiveForm" >
-
-    <mat-form-field class="buttonGroup">
-      <mat-label>Марка</mat-label>
-      <mat-select (openedChange) = "openMarksOptions($event)" [(ngModel)]="selectedMark" name="mark">
-        <mat-option  (click)="closeMarksOptions()" *ngFor="let mark of allMarks" [value]="mark.name">
-          <div class="option">
-            <div>{{mark.name}}</div><div></div><div *ngIf="!isClosedMarksOptions">{{mark.minPrice | priceVisible}}</div>
-          </div>
-        </mat-option>
-      </mat-select>
+    <mat-form-field style="width: 100%" class="example-full-width">
+      <input matInput placeholder="Стоимость автомобиля..." [(ngModel)] = "price" name="price">
     </mat-form-field>
-    
-    <mat-form-field class="buttonGroup">
-      <mat-label>Модель</mat-label>
-      <mat-select (openedChange) = "openModelsOptions($event)" [(ngModel)]="selectedModel" name="model">
-        <mat-option (click)="closeModelsOptions()" *ngFor="let model of models" [value]="model.name">
-          <div class="option">
-            <div>{{model.name}}</div><div></div><div *ngIf="!isClosedModelsOptions">{{model.minPrice | priceVisible}}</div>
-          </div>
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+  </div>
 
-
-    <mat-form-field  class="buttonGroup" >
-      <mat-label>Комплектация</mat-label>
-      <mat-select (openedChange) = "openCompsOptions($event)" [(ngModel)]="selectedComp" name="comp">
-        <mat-option (click)="closeCompsOptions()" *ngFor="let comp of comps" [value]="comp.name">
-          <div class="option">
-            <div>{{comp.name}}</div><div></div><div *ngIf="!isClosedCompsOptions">{{comp.price | priceVisible}}</div>
-          </div>
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-  </form>
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="Цена" [(ngModel)] = "price" name="price">
-  </mat-form-field>
-
-  <!-- end form -->
-  
-  <div style="margin: 10px; display: flex; flex-wrap: wrap; justify-content: center;">
-
+  <div class="slidersAndBestChoise">
     <mat-card class="slidersBlock">
+
+      <!-- START CREDIT-LISING; USD-BYR SLIDERS -->
       <div *ngIf="selectedFace == 'F' else U">
+        <div class="booleanSliderLables">
+          <span>Кредит</span>
+          <span>Лизинг</span>
+        </div>
         <ng5-slider [(value)]="creditLisingValue"  [options]="creditLisingOptions"></ng5-slider>
         <!-- (valueChange)="isChangedCreditLising()" -->
       </div>
       <ng-template #U>
+        <div class="booleanSliderLables">
+          <span>BYR</span>
+          <span>USD</span>
+        </div>
         <div>
           <ng5-slider [(value)]="BYRorUSDvalue" [options]="BYRorUSDoptions"></ng5-slider>
         </div>
       </ng-template>
-
-      <div style="margin: 5px;">
-        Первый платёж:
-      </div>
-      <div style="margin: 5px;">
-        {{getFirstPayment()}}
+      <!-- END CREDIT-LISING; USD-BYR SLIDERS -->
+    
+      
+      <h2 style="margin: 8px 0 0 0; font-size: 1.7em;">
+        Первый платёж: {{getFirstPayment()}}
+      </h2>
+      <div class="divForSlider">
+        <ng5-slider *ngIf="creditLisingValue === 0 else lisingFirstPaymentSlider" [(value)]="firstPaymentPercentageValue" [options]="firstPaymentPercentageOptions"></ng5-slider>
+        <ng-template #lisingFirstPaymentSlider>
+          <ng5-slider [(value)]="lisingFirstPaymentPercentageValue" [options]="lisingFirstPaymentPercentageOptions"></ng5-slider>
+        </ng-template>
+        <div  matTooltip="Текст подсказки про бегунок c процентом первого платежа"
+              matTooltipPosition="above"
+              matTooltipHideDelay="1000"
+              matTooltipClass="toolTipText"
+              class="toolTip">
+          ?
+        </div>
       </div>
       
-      <ng5-slider *ngIf="creditLisingValue === 0 else lisingFirstPaymentSlider" [(value)]="firstPaymentPercentageValue" [options]="firstPaymentPercentageOptions"></ng5-slider>
-      <ng-template #lisingFirstPaymentSlider>
-        <ng5-slider [(value)]="lisingFirstPaymentPercentageValue" [options]="lisingFirstPaymentPercentageOptions"></ng5-slider>
-      </ng-template>
-
-      <div style="margin: 20px 5px 5px 5px; ">
-        Срок
+      <!-- <div style="display: flex; margin-top:20px">
+        <span *ngFor="let persentage of creditRepaymentValues">{{persentage}}</span>
+      </div> -->
+    
+      <h2 style="margin: 20px 0 0 0; font-size: 1.7em; ">
+        Срок: {{getPeriod()}}
+      </h2>
+  
+      <div class="divForSlider">
+        <ng5-slider *ngIf="creditLisingValue === 0 else lisingRepaymentPeriodSlider" [(value)]="repaymentPeriodValue" [options]="repaymentPeriodOptions"></ng5-slider>
+        <ng-template #lisingRepaymentPeriodSlider>
+          <ng5-slider [(value)]="lisingRepaymentPeriodValue" [options]="lisingRepaymentPeriodOptions"></ng5-slider>
+        </ng-template>
+        <div  matTooltip="Текст подсказки про бегунок с периодом"
+              matTooltipPosition="above"
+              matTooltipHideDelay="1000"
+              matTooltipClass="toolTipText"
+              class="toolTip">
+          ?
+        </div>
       </div>
-      <div style="margin: 5px;">
-        {{getPeriod()}}
-      </div>
-
-      <ng5-slider *ngIf="creditLisingValue === 0 else lisingRepaymentPeriodSlider" [(value)]="repaymentPeriodValue" [options]="repaymentPeriodOptions"></ng5-slider>
-      <ng-template #lisingRepaymentPeriodSlider>
-        <ng5-slider [(value)]="lisingRepaymentPeriodValue" [options]="lisingRepaymentPeriodOptions"></ng5-slider>
-      </ng-template>
-
-
     </mat-card>
-
+    
     <mat-card class="slidersBlock">
-      <div style="display: flex; flex-direction: column; align-items: center; height: 100%; width: 100%">
+      <div class="slidersRightBlock">
+        <h3>Лучший выбор:</h3>
         <img [src]="link" class="image">
-        <div>Лучший выбор</div>
-        <div>Процентная ставка:</div>
-        <div>{{(calculateRate() * 100).toFixed(2)}} %</div>
-        <div>Ежемесячный платёж:</div>
-        <div>{{getPLT().toFixed(2)}} BYN</div>
+        <h3>Процентная ставка:</h3>
+        <h3 class="values">{{(calculateRate() * 100).toFixed(2)}} %</h3>
+        <h3>Ежемесячный платёж:</h3>
+        <h3 class="values">{{getPLT().toFixed(2)}} BYN</h3>
         <!--
         <div>Выгода:</div>
         <div>{{getExtraPayment()}}</div>
         -->
       </div>
     </mat-card>
-
   </div>
-  <button mat-raised-button (click)="scrollToThirdPage()" class="margin" color="primary" >Оформить заявку</button>
+
+  <button mat-raised-button style="font-size: 1.1em; padding: 2px 10px" (click)="scrollToThirdPage()" color="primary" >Подробнее об условиях</button>
+</div>
+</div>
 </div>
 
-<div class="screen"  [style.minWidth.px] = "clientWidth" [style.minHeight.px] = "clientHeight" >
-  <div style="display: flex; flex-direction: column; align-items: center; width: 100%; height: 100%;">
-    <div>
-      <h2>Заявка на финансирование</h2>
-    </div>
-    <form onsubmit="console.log('efsf')" style="display: flex; flex-direction: column; align-items: center; width: 100%; height: 90%;">
-      <mat-form-field style="width: 300px">
-        <input matInput placeholder="Имя" value="" required>
+
+
+
+<!-- Third screen -->
+<div [style.minWidth.px] = "clientWidth" [style.minHeight.px] = "clientHeight">
+<div [style] = "thirdScreenStyle">
+<div class="screen thirdScreen" [style.minWidth.px] = "clientWidth" [style.minHeight.px] = "clientHeight">
+  <mat-card class="request" >
+    <p class="requestTitle"><strong>Заявка на финансирование</strong></p>
+    <p class="requestDescription">Наш специалист свяжется с вами и подробно проконсультирует вас обо всех условиях покупки автомобиля</p>
+    <form onsubmit="console.log('efsf')" id="formaToPost" style="display: flex; flex-direction: column; align-items: center; width: 90%; height: 90%;">
+      <input type="hidden" name="project_name" value="Обратный Звонок">
+      <input type="hidden" name="admin_email" value="fligo14@gmail.com">
+      <input type="hidden" name="form_subject" value="New order">
+      <mat-form-field style="width: 400px">
+        <input matInput placeholder="Имя" value="" name="name" required>
       </mat-form-field>
-      <mat-form-field style="width: 300px">
-        <input matInput placeholder="Телефон" value="" required>
+      <mat-form-field style="width: 400px">
+        <input matInput placeholder="Телефон" value="" name="phone" required>
       </mat-form-field>
-      <mat-form-field style="width: 300px">
-        <input matInput placeholder="E-mail" value="">
-      </mat-form-field>
-      <button mat-raised-button type="submit" color="warn">Отправить заявку</button>
+      <button style="width: 200px; height: 40px; font-size: 1.1em;" mat-raised-button type="submit" color="warn">Отправить заявку</button>
     </form>
-  </div>
+  </mat-card>
 </div>
+</div>
+</div>
+<div class="footer"></div>
 
-
-
-  
-  
-  
-  
-  
-  
+<script type="text/javascript">
+  $("#forma1").submit(function() { //Change
+    var th = $(this);
+    $.ajax({
+    type: "POST",
+    url: "mail.php", //Change
+    data: th.serialize()
+  }).done(function() {
+    swal({
+      title: "Обратный звонок",
+      text: "Write something interesting:",
+      showCancelButton: true,
+      closeOnConfirm: false,
+      animation: "slide-from-top",
+      html: true,
+    });
+    setTimeout(function() {
+      // Done Functions
+      th.trigger("reset");
+    }, 1000);
+  });
+  return false;
+});
+</script>
