--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+
+.toolTipText {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 0.9em;
+}
