--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -42,10 +42,9 @@ p, h1, div {
   justify-content: center;
 }
 .blackLine {
-  width: 100%; 
-  height: 40px; 
-  position: fixed; 
-  background: linear-gradient(41deg, #ffcc00 120px, #333333 122px, #333333 80%, #333333 80%); 
+  height: 40px;
+  position: fixed;
+  background: linear-gradient(41deg, #ffcc00 120px, #333333 122px, #333333 80%, #333333 80%);
   z-index: 4;
 
   display: flex;
@@ -89,10 +88,11 @@ p, h1, div {
 .secondHalfFirstScreenBlocks {
   position: relative;
   display: flex;
-  align-items: center;
+  flex-direction: column;
 }
 .bottonToDown {
   position: absolute;
+  bottom: 16vmin;
   left: 101vmin;
 
   background: #ffffff00;
@@ -101,7 +101,17 @@ p, h1, div {
   border-top: 90px solid #ffffffcc;
   border-left: 103px solid transparent;
   height: 0;
-  width: 400px;
+  width: 430px;
+}
+.bottonToDown:hover {
+  border-top: 90px solid #ffffffee;
+}
+.bottonToDown:focus {
+  outline: 0;
+}
+.bottonToDown:hover p {
+  font-weight: bolder;
+  font-size: 31px;
 }
 .bottonToDown p {
   font-size: 32px;
@@ -109,10 +119,12 @@ p, h1, div {
   margin-top: -65px;
   margin-left: -10px;
   position: absolute;
+  text-align: center;
+  width: 300px;
 }
 
 #logoAbsolute {
-  /* 
+  /*
   display: none;
   */
   position: absolute;
@@ -136,8 +148,8 @@ p, h1, div {
 
 .iconContainer {
   position: relative;
-  top: 6vmin;
-  left: 2%;
+  top: 16vmin;
+  left: 1%;
   width: 105vmin;
   display: flex;
   align-items: center;
@@ -179,9 +191,10 @@ p, h1, div {
   position: absolute;
   top: -10px;
   left: 30px;
+  text-align: left;
 }
 .textTitle p {
-  margin-top: 20px;
+  margin: 20px 0 10px 0;
   font-size: 4.9vmin;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue' ,sans-serif;
 }
@@ -223,14 +236,24 @@ p, h1, div {
   justify-content: center;
 }
 .page2Title {
-  font-size: 5.5vmin;
+  font-size: 4vmin;
   position: relative;
   right: 0vmin;
-  margin: 0 0 0 0;
+  margin: 0 0 20px 0;
   text-align: center;
 }
 .choiseAutoType {
   width: 80vmin;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 3.3vmin;
+}
+.choiseAutoType p {
+  margin: 0;
+}
+.price {
+  width: 80%;
 }
 .choiseAutoType h3 {
   margin: 0;
@@ -268,32 +291,37 @@ p, h1, div {
   margin-bottom: 7px;
 }
 .booleanSliderLables span {
-  font-size: 1.6em;
+  font-size: 1.5em;
   font-weight: bold;
 }
 .slidersAndBestChoise {
   margin: -20px 10px 0 10px;
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
+  width: 60%;
 }
 .slidersBlock {
-  min-width: 350px; 
+  width: 50%;
   margin: 10px;
   min-height: 200px;
-  font-size: 10px;
+  font-size: 1.5vmin;
   background-color: #ffffff40;
 }
 .slidersRightBlock {
-  display: flex; 
-  flex-direction: column; 
-  align-items: center; 
-  height: 100%; 
-  width: 100%
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
+  width: 100%;
+  align-items: center;
 }
 .slidersRightBlock h3 {
   margin: 4px 0;
   font-size: 1.5em;
+}
+.slidersRightBlock h2 {
+  margin: 4px 0;
+  font-size: 2.1em;
 }
 .values {
   font-weight: 900;
@@ -301,19 +329,47 @@ p, h1, div {
 ng5-slider {
   margin: 10px 0 10px 0;
 }
-.toolTip {
-  width: 20px; 
-  height: 20px; 
-  margin: 21px 0 0 7px; 
-  font-size: 1.5em; 
+.divForSlider {
+  display: flex;
+  justify-content:space-between;
+  align-items:center;
+}
+.divSliderContainer {
 
-  border-radius: 3px; 
-  border:solid 1px gray; 
+  width: 100%;
+  display: flex;
+  justify-content:space-between;
+  flex-direction: column;
+}
+.firstRepaymentValues {
+  display: none;
+  margin: 20px 32px 0 8px;
+  justify-content: space-between;
+}
+.firstRepaymentValues span {
+
+}
+.toolTip {
+  width: 20px;
+  height: 20px;
+  margin: 2px 0 0 7px;
+  font-size: 1.5em;
+
+  border-radius: 3px;
+  border:solid 1px gray;
 
   display: flex;
   align-items: center;
   justify-content: center;
 }
+.aboutConditions {
+  font-size: 1.6em;
+  padding: 10px 30px;
+}
+
+
+
+
 /* MAYBE I NOT NEED THIS RULE */
 .margin {
   width: 151px;
@@ -352,35 +408,44 @@ ng5-slider {
   font-family: 'Times New Roman', Times, serif;
 }
 .request {
-  display: flex; 
-  flex-direction: column; 
+  display: flex;
+  flex-direction: column;
   align-items: center;
 
   min-width: 600px;
   background: #ffcc00;
   margin-bottom: 150px;
+  padding: 40px;
 }
 .requestTitle {
-  font-size: 38px; 
+  font-size: 38px;
   margin: 0;
 }
 .requestDescription {
-  font-size: 20px;  
+  font-size: 20px;
   margin: 2px;
   width: 600px;
-  text-align: justify;
+  text-align: center3;
+}
+.requestInputs {
+  width: 100%;
 }
 
 
 
 
 .footer {
-  height: 150px;
+  height: 80px;
   width: 100%;
 
   background: #333333;
 
   color: #ffcc00;
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 
@@ -432,9 +497,9 @@ ng5-slider {
 }
 
 .image {
-  height: 100px; 
-  width: auto; 
-  background-size: cover; 
+  height: 100px;
+  width: auto;
+  background-size: cover;
 }
 
 ng5-slider > * {
@@ -446,18 +511,13 @@ ng5-slider > span {
   display: none;
 }
 
-.divForSlider {
-  display: flex; 
-  justify-content:space-between; 
-  align-items:center;
-}
 
 
 
 @media screen and (max-device-width: 824px) {
   /*
   .slidersBlock {
-    min-width: 250px; 
+    min-width: 250px;
     margin: 10px;
     min-height: 300px;
     font-size: 10px;
@@ -466,15 +526,117 @@ ng5-slider > span {
     max-width: 230px;
   }
   */
+  .slidersAndBestChoise {
+    flex-wrap: wrap;
+    width: 90%;
+    height: 50%;
+  }
+  .slidersBlock {
+    width: 90%;
+    min-width: 90%;
+  }
   .request {
     min-width: 80%;
   }
   .requestTitle {
-    font-size: 6vmin; 
+    font-size: 5.9vmin;
     margin: 0;
   }
   .requestDescription {
-    font-size: 5vmin;  
+    font-size: 3vmin;
     margin: 2px;
+  }
+  .request {
+    width: 80%;
+  }
+  .requestDescription {
+    width: 90%;
+  }
+  .secondHalfFirstScreenBlocks {
+    justify-content: space-around;
+    align-items: center;
+  }
+  .bottonToDown {
+    position: static;
+    background: #ffffffcc;
+    border: 0;
+    height: 90px;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .bottonToDown:hover {
+    background: #ffffffee;
+    border: 0;
+  }
+  .bottonToDown p {
+    font-size: 32px;
+    color: #d70000;
+    margin: 0;
+    position: relative;
+  }
+  .bottonToDown:hover p {
+    font-weight: bold;
+  }
+
+  #logoAbsolute {
+    position: static;
+    top: 40px;
+    left: 185px;
+
+    padding: 30px 0;
+    border:0;
+    height: 90px;
+    background: #eee;
+    width: 90%;
+  }
+  #logoAbsolute div {
+    background: url(../assets/images/service/logo.png) center center no-repeat;
+    background-size: 100% auto;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    position: static;
+  }
+
+  .iconContainer {
+    position: static;
+    width: 94%;
+    margin: 0 3%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .textTitle {
+    position: static;
+  }
+  .numberForConnection {
+    margin-right: 2%;
+  }
+  .price {
+    width: 50%;
+    font-size: 5vmin;
+    margin-left: 30%;
+  }
+  .page2Title {
+    margin-top: 50px;
+  }
+  .aboutConditions {
+    margin-bottom: 10px;
+  }
+}
+
+
+@media screen and (max-device-width: 430px) {
+  .price {
+    width: 60%;
+    margin-left: 30%;
+  }
+  .slidersBlock {
+    width: 90%;
+    height: 50%;
+    min-height: 50%;
   }
 }
