--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -170,14 +170,14 @@
     </div>
     <div class="footerBlockRight" style="display: flex;">
       <div class="divFooterIcons">
-        <i class="footerIconPhone"></i>
+        <i class="footerIconPhone footerIcon"></i>
         <div style="display: flex; flex-direction: column; align-items: left; justify-content: space-around">
           <span>ТЕЛЕФОНЫ</span>
           <span class="value">+375(33)689-29-89</span>
         </div>
       </div>
       <div class="divFooterIcons">
-        <i class="footerIconMail"></i>
+        <i class="footerIconMail footerIcon"></i>
         <div style="display: flex; flex-direction: column; align-items: left; justify-content: space-around">
           <span>НАПИСАТЬ НАМ</span>
           <span class="value">info@av-finance.by</span>
