--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div [style.minWidth.px] = "clientWidth" class="blackLine">
-  <div class="logo"></div>
+  <div class="logo">
+    <div class="emptyDivForPositionLogo"></div>
+      <span>AV-Finance</span>
+  </div>
   <span class="numberForConnection">
     <div class="yellowTreangle"></div>
     +375(33)689-29-89
@@ -11,7 +14,14 @@
   <div [style.minWidth.px] = "clientWidth" [style.minHeight.px] = "clientHeight*0.55" >
   <div [style]="firstScreenFirstHalfStyle">
   <div class="screen" [style.minWidth.px] = "clientWidth" [style.minHeight.px] = "clientHeight*0.55" >
-    <div id='logoAbsolute'><div></div></div>
+    <div class="mainTitleAndDescription">
+      <div class="mainTitle">
+        <p>КРЕДИТ / ЛИЗИНГ АВТОМОБИЛЕЙ С ПРОБЕГОМ<br> ДЛЯ ФИЗИЧЕСКИХ ЛИЦ</p>
+      </div>
+      <div class="mainDescription">
+        <p>Мы проанализировали все предложения банков и лизинговых компаний в области финансирования покупки автомобиля и подобрали для Вас самые выгодные условия. Наши партнерские соглашения с банками позволяют выбрать Вам самый лучший вариант финансирования.</p>
+      </div>
+    </div>
   </div>
   </div>
   </div>
@@ -19,9 +29,6 @@
   <div [style.minWidth.px] = "clientWidth" [style.minHeight.px] = "clientHeight*0.45">
   <div [style]="firstScreenSecondHalfStyle">
   <div class="secondHalfFirstScreenBlocks" [style.minWidth.px] = "clientWidth" [style.minHeight.px] = "clientHeight*0.45">
-    <div class="textTitle">
-      <p>ПРОДАЖА АВТОМОБИЛЕЙ С ПРОБЕГОМ<br> В КРЕДИТ/ЛИЗИНГ ДЛЯ ФИЗИЧЕСКИХ ЛИЦ</p>
-    </div>
     <div class="iconContainer">
       <div class="iconForAttract">
         <div class="iconTime iconSize"></div>
